--- a/index1.html
+++ b/index1.html
@@ -43,10 +43,10 @@
    <input textarea type="text" name="mensaje" id="mensaje">
   </div>
 
-               <!-- <p id="cap">
+               <p id="cap">
                 <div class="g-recaptcha" data-sitekey="your_site_key"></div>
-                </p> -->
-                <!--<p class="acciones"><input type="submit" value="enviar" onclick="enviar()"  /></p>-->
+                </p>
+                <p class="acciones"><input type="submit" value="enviar" onclick="enviar()"  /></p>
 
             <button onclick= "enviar()" id="button" value="Send Email" >enviar</button>
             
